@@ -11,7 +11,7 @@
               <div class="clearfix">
                   <label i18n:translate="">Email address:</label>
                   <div class="input">
-                      <input id="email" class="xlarge" type="text" name="email" title="email"/>
+                    <input id="email" class="xlarge" type="text" name="email" title="email" value="${request.params.get('email')}"/>
                   </div>
               </div>
               <input type="submit" class="btn btn-success" name="form.submitted" value="Reset password" />
